--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -1,5 +1,9 @@
 <link rel="import" href="../polymer/polymer-element.html">
 
+<!-- Ensure Web Animations polyfill is loaded since neon-animation 2.0 doesn't import it -->
+<link rel="import" href="../neon-animation/web-animations.html">
+
+
 <dom-module id="earth-dropdown-trigger">
     <template>
         <style>
@@ -14,8 +18,10 @@
         <iron-dropdown id="dropdown"
                        vertical-align="[[verticalAlign]]"
                        horizontal-align="[[horizontalAlign]]"
-                       disabled="[[disabled]]">
-            <content select=".dropdown-content"></content>
+                       disabled="[[disabled]]"
+                       open-animation-config="[[openAnimationConfig]]"
+                       close-animation-config="[[closeAnimationConfig]]">
+            <slot name="dropdown-content" slot="dropdown-content"></slot>
         </iron-dropdown>
     </template>
 
@@ -44,6 +50,35 @@
                         value: 'right'
                     },
                     disabled: Boolean,
+                    openAnimationConfig: {
+                        type: Array,
+                        value: function() {
+                            return [{
+                                name: 'fade-in-animation',
+                                timing: {
+                                    delay: 150,
+                                    duration: 50
+                                }
+                            }, {
+                                name: 'expand-animation',
+                                timing: {
+                                    delay: 150,
+                                    duration: 200
+                                }
+                            }];
+                        }
+                    },
+                    closeAnimationConfig: {
+                        type: Array,
+                        value: function() {
+                            return [{
+                                name: 'fade-out-animation',
+                                timing: {
+                                    duration: 200
+                                }
+                            }];
+                        }
+                    }
 
                 };
             }
