--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -50,9 +50,9 @@ Custom property                          | Description                  | Defaul
 `--earth-layout-header-background-color` | Header background color      | --primary-color
 `--earth-layout-header-text-color`       | Header text color            | --dark-theme-text-color
 
-@group App Elements
-@element app-toolbar
-@demo app-toolbar/demo/index.html
+@group Earth Elements
+@element earth-editable-layout
+@demo demo/index.html
 -->
 <dom-module id="earth-editable-layout">
     <template>
