--- a/demo/index.html
+++ b/demo/index.html
@@ -30,7 +30,7 @@
                     <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
                     <paper-input label="Lastname" value="{{data.lastname}}" required></paper-input>
                 </air-cruddy-elasticsearch>
-                <!--<sample-content size="100"></sample-content>-->
+                <sample-content size="100"></sample-content>
                 <div>End sample</div>
             </div>
             <!--<div slot="error">-->
