--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -7,7 +7,6 @@
 <link rel="import" href="../iron-icon/iron-icon.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../iron-dropdown/iron-dropdown.html">
 
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-item/paper-icon-item.html">
@@ -71,7 +70,7 @@ Custom property                          | Description                  | Defaul
             app-toolbar {
                 background: var(--earth-layout-header-background-color, var(--primary-color));
                 color: var(--earth-layout-header-text-color, var(--dark-theme-text-color));
-                @apply (--layout-flex);
+                /*@apply (--layout-flex);*/
             }
 
             app-header paper-icon-button {
