--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -2,6 +2,8 @@
 
 <!-- Ensure Web Animations polyfill is loaded since neon-animation 2.0 doesn't import it -->
 <link rel="import" href="../neon-animation/web-animations.html">
+
+<link rel="import" href="../iron-dropdown/iron-dropdown.html">
 <link rel="import" href="../paper-styles/paper-styles.html">
 
 
@@ -10,20 +12,19 @@
         <style>
             :host {
                 display: inline-block;
-                margin: 1em;
             }
 
             :host ::slotted([slot=dropdown-content]){
                 @apply ( --paper-font-menu);
                 background-color: white;
+                color: black;
                 line-height: 20px;
                 border-radius: 3px;
                 box-shadow: 0px 2px 6px #ccc;
             }
         </style>
-        <div on-tap="open">
-            <slot name="dropdown-trigger"></slot>
-        </div>
+
+        <slot name="dropdown-trigger" on-tap="open"></slot>
         <iron-dropdown id="dropdown"
                        vertical-align="[[verticalAlign]]"
                        horizontal-align="[[horizontalAlign]]"
