--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -125,7 +125,7 @@ Custom property                          | Description                  | Defaul
                     <earth-dropdown-trigger>
                         <paper-icon-button slot="dropdown-trigger" icon="icons:more-vert"></paper-icon-button>
                         <div slot="dropdown-content">
-                            <paper-icon-item on-tap="_onDelete">
+                            <paper-icon-item on-tap="delete">
                                 <iron-icon icon="delete"  slot="item-icon"></iron-icon>
                                 Delete
                             </paper-icon-item>
