--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -25,7 +25,7 @@
         </style>
 
         <slot name="dropdown-trigger" on-tap="open"></slot>
-        <iron-dropdown id="dropdown"
+        <iron-dropdown id="dropdown" on-tap="_handleSelectItem"
                        vertical-align="[[verticalAlign]]"
                        horizontal-align="[[horizontalAlign]]"
                        disabled="[[disabled]]"
@@ -95,6 +95,9 @@
 
             open() {
                 this.$.dropdown.open();
+            }
+            _handleSelectItem(e) {
+                this.$.dropdown.close();
             }
         }
 
