--- a/demo/index.html
+++ b/demo/index.html
@@ -29,10 +29,19 @@
                                           entity-id="1" debug>
                     <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
                     <paper-input label="Lastname" value="{{data.lastname}}" required></paper-input>
+                    <paper-input label="Age" value="{{data.age}}" required></paper-input>
                 </air-cruddy-elasticsearch>
                 <sample-content size="10"></sample-content>
                 <div>End sample</div>
             </div>
+            <div slot="dropdown">
+                <earth-dropdown-item icon="icons:refresh">Refresh</earth-dropdown-item>
+                <earth-dropdown-item icon="icons:add-shopping-cart">Add chart</earth-dropdown-item>
+            </div>
+            <!--<div slot="header-icon">-->
+                <!--<paper-icon-button  icon="icons:alarm"></paper-icon-button>-->
+                <!--<paper-icon-button icon="icons:android"></paper-icon-button>-->
+            <!--</div>-->
             <!--<div slot="error">-->
                 <!--<h1>Bye !!!! </h1>-->
             <!--</div>-->
