--- a/demo/index.html
+++ b/demo/index.html
@@ -34,10 +34,10 @@
                 <sample-content size="10"></sample-content>
                 <div>End sample</div>
             </div>
-            <div slot="dropdown">
-                <earth-dropdown-item icon="icons:refresh">Refresh</earth-dropdown-item>
-                <earth-dropdown-item icon="icons:add-shopping-cart">Add chart</earth-dropdown-item>
-            </div>
+            <!--<div slot="dropdown">-->
+                <!--<earth-dropdown-item icon="icons:refresh">Refresh</earth-dropdown-item>-->
+                <!--<earth-dropdown-item icon="icons:add-shopping-cart">Add chart</earth-dropdown-item>-->
+            <!--</div>-->
             <!--<div slot="header-icon">-->
                 <!--<paper-icon-button  icon="icons:alarm"></paper-icon-button>-->
                 <!--<paper-icon-button icon="icons:android"></paper-icon-button>-->
