Rename to earth-cruddy

--- a/demo/dropdown.html
+++ b/demo/dropdown.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>earth-editable-layout demo</title>
+    <title>earth-cruddy demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="vertical-section-container centered">
-    <h3>Basic earth-editable-layout demo</h3>
+    <h3>Basic earth-dropdown-trigger demo</h3>
     <demo-snippet>
         <template>
             <earth-dropdown-trigger>
