--- a/demo/index.html
+++ b/demo/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>earth-editable-layout demo</title>
+    <title>earth-cruddy demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
 
-    <link rel="import" href="../earth-editable-layout.html">
+    <link rel="import" href="../earth-cruddy.html">
     <link rel="import" href="sample-content.html">
 
 
@@ -21,7 +21,7 @@
 <body unresolved>
 <dom-bind>
     <template>
-        <earth-editable-layout status="{{status}}">
+        <earth-cruddy status="{{status}}">
             <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit [[data.firstname]]</div>
             <div slot="content">
                 <h1>Page content</h1>
@@ -46,7 +46,7 @@
             <!--<div slot="error">-->
                 <!--<h1>MON ERROR Bye !!!! </h1>-->
             <!--</div>-->
-        </earth-editable-layout>
+        </earth-cruddy>
     </template>
 </dom-bind>
 
