--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>earth-editable-layout</title>
+  <title>earth-cruddy</title>
 
   <script src="../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../iron-component-page/iron-component-page.html">
