--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -6,7 +6,7 @@
 <link rel="import" href="../../paper-input/paper-input.html">
 <link rel="import" href="../../paper-button/paper-button.html">
 
-<link rel="import" href="../earth-editable-layout.html">
+<link rel="import" href="../earth-cruddy.html">
 
 <link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
 
@@ -30,7 +30,7 @@ The `user-validator` provides
     </style>
     <template>
 
-        <earth-editable-layout>
+        <earth-cruddy>
             <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <ul class="dropdown-content">
                 <li><a href="javascript:void(0)">item 1</a></li>
@@ -49,7 +49,7 @@ The `user-validator` provides
 
 
             </div>
-        </earth-editable-layout>
+        </earth-cruddy>
     </template>
 </dom-module>
 
