--- a/demo/index3.html
+++ b/demo/index3.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>earth-editable-layout demo</title>
+    <title>earth-cruddy demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../earth-editable-layout.html">
+    <link rel="import" href="../earth-cruddy.html">
 
     <link rel="import" href="demo-edit-layout.html">
 
@@ -21,7 +21,7 @@
 </head>
 <body>
 <div class="vertical-section-container centered">
-    <h3>Basic earth-editable-layout demo</h3>
+    <h3>Basic earth-cruddy demo</h3>
     <demo-snippet>
         <template>
             <demo-edit-layout></demo-edit-layout>
