--- a/earth-cruddy.html
+++ b/earth-cruddy.html
@@ -108,21 +108,19 @@ Custom property                          | Description                  | Defaul
         </style>
 
 
-        <app-header-layout fullbleed>
+        <app-header-layout id="headerLayout" fullbleed>
 
             <app-header slot="header" condenses fixed effects="waterfall">
                 <app-toolbar>
                     <paper-icon-button icon="icons:arrow-back" on-tap="close"></paper-icon-button>
-                    <div main-title>
+                    <div main-title on-tap="resetLayout">
                         <slot name="title"></slot>
                     </div>
-
-
                     <slot name="header-icon"></slot>
                     <!--<paper-icon-button icon="icons:create-new-folder"  title="save"-->
                     <!--on-tap="newEntity"></paper-icon-button>-->
-                    <paper-icon-button icon="icons:autorenew" disabled$="[[!status.isDirty]]" title="Reload"
-                                       on-tap="reload"></paper-icon-button>
+                    <!--<paper-icon-button icon="icons:autorenew" disabled$="[[!status.isDirty]]" title="Reload"-->
+                                       <!--on-tap="reload"></paper-icon-button>-->
                     <paper-icon-button icon="icons:check" disabled$="[[!status.isDirty]]" title="save"
                                        on-tap="save"></paper-icon-button>
                     <paper-icon-button icon="icons:clear" disabled$="[[!status.isDirty]]" title="Reset"
@@ -242,6 +240,13 @@ Custom property                          | Description                  | Defaul
                 if (this.debug) {
                     console.log(...arguments);
                 }
+            }
+
+            // --- Layout Apis
+            // --- ---------------------------
+            resetLayout() {
+                console.log('Rest layout');
+                this.$.headerLayout.resetLayout();
             }
 
             // --- Status
